--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 llama-index==0.10.23
 llama-index-llms-huggingface==0.1.4
 llama-index-embeddings-huggingface==0.1.4
+pypdf==4.1.0
 fastapi==0.110.0
 uvicorn[standard]==0.29.0
