--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -29,7 +29,7 @@ RUN rm /tmp/cuda_12.2.0_535.54.03_linux.run
 
 RUN python -m pip install --no-cache-dir \
     'jupyter-server-proxy' 'jupyter-vscode-proxy' \
-    'pyyaml' 'grequests' 'mdtex2html' 'markdown' 'nbformat' \
+    'pyyaml' 'grequests' 'mdtex2html' 'markdown' \
     'jupyterlab-drawio' 'jupyterlab-spreadsheet-editor' 'jupyterlab-code-formatter' 'jupyterlab_image_editor' && \
     fix-permissions "${CONDA_DIR}" && \
     fix-permissions "/home/${NB_USER}"
