--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-llama-index==0.10.23
-langchain
-transformers
+marker-pdf
+pyyaml
+requests
 fastapi==0.110.0
 uvicorn[standard]==0.29.0
+transformers
+llama-index==0.10.23
+langchain
 annoy
